Création du compteur //TODO créer le style du compteur

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="./css/main.css">
         <link rel="shortcut icon" type="image/jpg" href="./img/favicon.png"/>
+        <script defer src="./javascript/counterAnimation.js"></script>
     </head>
 
     <body>
@@ -92,7 +93,8 @@
 
                     <img id="reading-image" src="./img/accueil-img.jpg" alt="">
 
-                    <h1>La bibliothèque contient actuellement 100000 livres par 25000 auteurs</h1>
+                    <h1>La bibliothèque contient actuellement <span id="livres"></span> livres 
+                        par <span id="auteurs"></span> auteurs</h1>
 
 
                     <aside id="quotes">
