--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
                 </div>
             </section>
 
-            <h1>Les best sellerss: </h1>
+            <h1 style="font-size: 60px;">Les best sellers: </h1>
             <article id="featured_books">
 
 
