première version du design de la section classement

--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,6 @@
 
                     </div>
                 </section>
-
                 <h1 style="font-size: 60px;">Les best sellers: </h1>
                 <article id="featured_books">
 
@@ -121,9 +120,13 @@
                 </article>
             </div>
             <div id="classement">
-                <svg class="advanced__icon">
-                    <use href="./img/previous.svg" class="previous"></use>
+                <svg class="advanced__icon previous">
+                    <use href="./img/icons.svg#previous-icon"></use>
                 </svg>
+                
+                <section id="classementContainer">
+
+                </section>
             </div>
             <p>
                 Les données utilisées dans ce site peuvent être obtenu 
