Design complet des classements

--- a/public/index.html
+++ b/public/index.html
@@ -83,13 +83,13 @@
                         <li><a class='top'href="#"data-tag="History">Top Histoire</a></li>
                         <li><a class='top'href="#"data-tag=" Science Fiction">Top Science Fiction</a></li>
                         <li><a class='top'href="#"data-tag="Horror">Top Horreur</a></li>
-                        <li><a class='top' href="#"data-tag="Non-Fiction">Top Non-Fiction</a></li>
+                        <li><a class='top' href="#"data-tag="classic">Top Classiques</a></li>
                         <li><a class='best'href="#"data-tag="Fantasy">Best Fantasy</a></li>
                         <li><a class='best'href="#"data-tag="Romance">Best Romance</a></li>
                         <li><a class='best'href="#"data-tag="History">Best Histoire</a></li>
                         <li><a class='best'href="#"data-tag="Science Fiction">Best Science Fiction</a></li>
                         <li><a class='best'href="#"data-tag="Horror">Best Horreur</a></li>
-                        <li><a class='best'href="#"data-tag="Non-Fiction">Best Non-Fiction</a></li>
+                        <li><a class='best'href="#"data-tag="classic">Best Classiques</a></li>
 
                     </ul>
 
@@ -120,10 +120,13 @@
                 </article>
             </div>
             <div id="classement">
-                <svg class="advanced__icon previous">
-                    <use href="./img/icons.svg#previous-icon"></use>
-                </svg>
-                
+                <div style="display: flex;">
+                    <svg class="advanced__icon previous">
+                        <use href="./img/icons.svg#previous-icon"></use>
+                    </svg>
+                    <h1 id="titre-classement"></h1>
+                </div>
+
                 <section id="classementContainer">
 
                 </section>
