Amélioration du design des listes de livre

--- a/public/index.html
+++ b/public/index.html
@@ -78,12 +78,14 @@
 
                     <ul>
                         <li>Les meilleures livres : </li>
+                        <li><a class='top'href="#" data-tag="Thriller">Top Thriller</a></li>
                         <li><a class='top'href="#" data-tag="Fantasy">Top Fantasy</a></li>
                         <li><a class='top'href="#" data-tag="Romance">Top Romance</a></li>
                         <li><a class='top'href="#"data-tag="History">Top Histoire</a></li>
                         <li><a class='top'href="#"data-tag=" Science Fiction">Top Science Fiction</a></li>
                         <li><a class='top'href="#"data-tag="Horror">Top Horreur</a></li>
                         <li><a class='top' href="#"data-tag="classic">Top Classiques</a></li>
+                        <li><a class='best'href="#" data-tag="Thriller">Best Thriller</a></li>
                         <li><a class='best'href="#"data-tag="Fantasy">Best Fantasy</a></li>
                         <li><a class='best'href="#"data-tag="Romance">Best Romance</a></li>
                         <li><a class='best'href="#"data-tag="History">Best Histoire</a></li>
