--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <header class="header">
                 <div>
-                    <img src="./img/favicon.png" alt="Logo" class="header__logo" />
+                    <img src="./img/main.png" alt="Logo" class="header__logo" />
                     <form class="search">
                     <input
                         type="text"
@@ -133,6 +133,19 @@
 
                 </section>
             </div>
+            <div id="recherche">
+                <div style="display: flex;">
+                    <svg class="advanced__icon previous">
+                        <use href="./img/icons.svg#previous-icon"></use>
+                    </svg>
+                    <h1 id="titre-recherche"></h1>
+                </div>
+
+                <section id="rechercheContainer">
+
+                </section>
+            </div>
+
             <p>
                 Les données utilisées dans ce site peuvent être obtenu 
                 <a href="https://www.kaggle.com/mdhamani/goodreads-books-100k">ici</a>
