--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,12 @@
     <head>
         <link rel="stylesheet" href="./css/main.css">
         <link rel="stylesheet" href="./css/classement.css">
+        <link rel="stylesheet" href="./css/recherche.css">
 
         <link rel="shortcut icon" type="image/jpg" href="./img/favicon.png"/>
         <script defer src="./javascript/counterAnimation.js"></script>
         <script defer src="./javascript/fetchData.js"></script>
+        
     </head>
 
     <body>
