--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
         <link rel="shortcut icon" type="image/jpg" href="./img/favicon.png"/>
         <script defer src="./javascript/counterAnimation.js"></script>
         <script defer src="./javascript/fetchData.js"></script>
+        <title>Bibliothèque</title>
         
     </head>
 
