Implémentation pagination partie 1

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="./css/main.css">
         <link rel="stylesheet" href="./css/classement.css">
         <link rel="stylesheet" href="./css/recherche.css">
+        <link rel="stylesheet" href="./css/pagination.css">
 
         <link rel="shortcut icon" type="image/jpg" href="./img/favicon.png"/>
         <script defer src="./javascript/counterAnimation.js"></script>
@@ -147,6 +148,10 @@
                 <section id="rechercheContainer">
 
                 </section>
+                <ul class="paginationBar">
+                    <li><a class='pagination' href="#" id="previous"></a>«</li>
+
+                <ul>
             </div>
 
             <p>
