pagination design simple

--- a/public/index.html
+++ b/public/index.html
@@ -149,9 +149,9 @@
 
                 </section>
                 <ul class="paginationBar">
-                    <li><a class='pagination' href="#" id="previous"></a>«</li>
+                    <li class='pagination'><a href="#" id="previous">«</a></li>
 
-                <ul>
+                </ul>
             </div>
 
             <p>
