Refactoring et modifications pour préparer la création d'une page unique à chaque livre

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
         <script defer src="./javascript/counterAnimation.js"></script>
         <script src="./javascript/pagination.js"></script>
         <script defer src="./javascript/fetchData.js"></script>
+        <script defer src="./javascript/routing.js"></script>
         <title>Bibliothèque</title>
         
     </head>
@@ -154,6 +155,9 @@
                 </ul>
             </div>
 
+            <article id="one-book" style="display: none;">
+
+            </article>
             <p>
                 Les données utilisées dans ce site peuvent être obtenu 
                 <a href="https://www.kaggle.com/mdhamani/goodreads-books-100k">ici</a>
