Design basique page oneBook

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="./css/classement.css">
         <link rel="stylesheet" href="./css/recherche.css">
         <link rel="stylesheet" href="./css/pagination.css">
+        <link rel="stylesheet" href="./css/oneBook.css">
 
         <link rel="shortcut icon" type="image/jpg" href="./img/favicon.png"/>
         <script defer src="./javascript/counterAnimation.js"></script>
@@ -156,6 +157,9 @@
             </div>
 
             <article id="one-book" style="display: none;">
+                <svg class="advanced__icon previous">
+                    <use href="./img/icons.svg#previous-icon"></use>
+                </svg>
 
             </article>
             <p>
