Refactoring pour séparer le js principal en plusieurs fichiers plus court

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
         <link rel="shortcut icon" type="image/jpg" href="./img/favicon.png"/>
         <script defer src="./javascript/counterAnimation.js"></script>
         <script src="./javascript/pagination.js"></script>
+        <script defer src="./javascript/helperFunctions.js"></script>
+        <script defer src="./javascript/displayData.js"></script>
         <script defer src="./javascript/fetchData.js"></script>
         <script defer src="./javascript/routing.js"></script>
         <title>Bibliothèque</title>
