Derniers ajustements avant le déploiement

--- a/public/index.html
+++ b/public/index.html
@@ -115,16 +115,16 @@
                         </div>
 
 
-                        <aside id="quotes">
+                       <!-- <aside id="quotes">
                             <h2>Citation :</h2>
                             <img>
                             <i></i>
                             <h4>―</h4>
-                        </aside>
+                        </aside>-->
 
                     </div>
                 </section>
-                <h1 style="font-size: 60px;">Les best sellers: </h1>
+                <h1 style="font-size: 60px;margin-top: 200px;">Les best sellers: </h1>
                 <article id="featured_books">
 
 
