Deux bug fix majeur : 1- Le design responsive ne fonctionnait pas en situation réel 2- Lors du dernier commit j'ai rendu les images clickable et ça a cassé la précédente implémentation des détails d'un livre

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="./css/oneBook.css">
 
         <link rel="shortcut icon" type="image/jpg" href="./img/favicon.png"/>
+        <meta name="viewport" content="initial-scale=1" />
+
+
         <script defer src="./javascript/counterAnimation.js"></script>
         <script src="./javascript/pagination.js"></script>
         <script defer src="./javascript/helperFunctions.js"></script>
